fixed contrast errors

--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ h6 {
 }
 p{
     font-family: 'Source Sans Pro', sans-serif;
-    color: rgb(75, 75, 75);
+    color: rgb(51,51,51);
     font-size: 20px;
 } 
 a:link {
-	color: rgb(8, 144, 223);
+	color: rgb(6,53,81);
 	background-color: transparent;
 	text-decoration: none;
   }
@@ -98,15 +98,18 @@ aside {
     padding: 1%;
 } 
 article {
-    width: 100%;
+    width: 80%;
     height: 100%;
     background-color: rgb(193, 193, 193);
-    padding: 1% 10%;
-    margin: 1%;
-    text-align: center;
+    padding: 10%;
+    margin: 0 auto 20vh;
+    text-align: left;
     float: right;
     box-sizing: border-box;
     border-radius: 20px;
+    border-color: black;
+    border-style: ridge;
+    border-width: 24px;
 } 
 footer {
     width: 100%;
